--- a/css/mundubila.css
+++ b/css/mundubila.css
@@ -309,6 +309,15 @@ b {
 .why-raspberry-img:hover {
   width: 100%;
 }
+.ppl-gif {
+  width: 99%;
+}
+@media (min-width: 768px) {
+  .ppl-gif {
+    height: 435px;
+    width: auto;
+  }
+}
 .team-img {
   width: 140px;
   border-radius: 50%;
